...
                                        style="@style/CardView"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/scenario_1_row_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/card_padding"
            android:showDividers="middle">

            <Button
                android:id="@+id/scenario_1_button_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="RED"
                android:text="@string/red_button_label"
...
