<?xml version="1.0" encoding="utf-8"?>
<!--
Row 4 of 5: Contains a single TextView that displays the "name" of the item
in Row 1 that is currently selected.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        style="@style/CardView"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_weight="1">

        <TextView
            android:id="@+id/scenario_1_row_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:singleLine="true"
            android:text=" "
            android:textSize="14sp"/>
    </android.support.v7.widget.CardView>

</merge>