<!--
Vertical linear layout has 5 rows and occupies all of tab body
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/scenario_1_rows"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#e4e4e4"
              android:divider="@drawable/divider_horizontal"
              android:elevation="2dp"
              android:orientation="vertical"
              android:padding="@dimen/card_margin"
              android:showDividers="middle">

    <include layout="@layout/scenario_1_card_swatch"/>
    <include layout="@layout/scenario_1_card_pages"/>
    <include layout="@layout/scenario_1_card_text_align"/>
    <include layout="@layout/scenario_1_card_swatch_name"/>
    <include layout="@layout/scenario_1_card_rgb"/>

</LinearLayout>

